# wifi_manager

./: .env  Cargo.toml
src/: main.rs
src/ap/: settings.rs
src/portal/: ip_tables.rs  mod.rs  router.rs
